--- a/Source_Codes/ZP3CS/Lecture6/MainWindow.xaml
+++ b/Source_Codes/ZP3CS/Lecture6/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
 	<Grid>
-		<TextBlock HorizontalAlignment="Left" Margin="231,80,0,0" TextWrapping="Wrap" Text="Select a message option and then choose the Display button." VerticalAlignment="Top"/>
+		<TextBlock HorizontalAlignment="Left" Margin="231,80,0,0" TextWrapping="Wrap" Text="Select a message option and then choose the Display button." VerticalAlignment="Top" Height="17" Width="327"/>
 		<RadioButton x:Name="HelloButton" Content="Hello" IsChecked="True" HorizontalAlignment="Left" Margin="277,149,0,0" VerticalAlignment="Top"/>
 		<RadioButton x:Name="GoodbyeButton" Content="Goodbye" HorizontalAlignment="Left" Margin="468,149,0,0" VerticalAlignment="Top"/>
 		<Button Content="Display" Name="DisplayButton" HorizontalAlignment="Left" Margin="352,201,0,0" VerticalAlignment="Top" Width="75" Click="DisplayButton_Click"/>
