--- a/Source_Codes/ZP3CS/Lecture6/Styles/Profiles.xaml
+++ b/Source_Codes/ZP3CS/Lecture6/Styles/Profiles.xaml
@@ -6,7 +6,7 @@
 		<ResourceDictionary Source="pack://application:,,,/Styles/Colors.xaml" />
 	</ResourceDictionary.MergedDictionaries>
 
-	<Style TargetType="{x:Type Border}" x:Key="ClientCardBorder">
+	<Style TargetType="{x:Type Border}" x:Key="ProfileCardBorder">
 		<Setter Property="BorderThickness" Value="2" />
 		<Setter Property="CornerRadius" Value="8" />
 		<Setter Property="Width" Value="200" />
